tweaking inputs, moving validation icons only to text inputs, fixing spacing of search input

--- a/src/styles/_forms.scss
+++ b/src/styles/_forms.scss
@@ -284,13 +284,12 @@ input[type="checkbox"] {
 .has-success,
 .has-warning,
 .has-error {
-  position: relative;
 
-  &:after {
+  & .validation-icon:after {
     @extend .icon;
-    position: absolute;
+    position: relative;
     right: $half-spacer;
-    top: $font-size-lg / 2;
+    bottom: $font-size-lg + $half-spacer;
     font-size: $font-size-lg;
   }
 }
@@ -298,7 +297,7 @@ input[type="checkbox"] {
 .has-success {
   @include form-control-validation(success, $brand-success);
 
-  &:after {
+  & .validation-icon:after {
     color: $brand-success;
     content: "\f058";
   }
@@ -307,7 +306,7 @@ input[type="checkbox"] {
 .has-warning {
   @include form-control-validation(warning, $brand-warning);
 
-  &:after {
+  & .validation-icon:after {
     color: $brand-warning;
     content: "\f05a";
   }
@@ -316,7 +315,7 @@ input[type="checkbox"] {
 .has-error {
   @include form-control-validation(error, $brand-danger);
 
-  &:after {
+  & .validation-icon:after {
     color: $brand-danger;
     content: "\f057";
   }
